<resources>
    <string name="app_name">Krystal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signupname"> Name</string>
    <string name="desc">Helps user manage their apps</string>
    <string name="signupemail">Email</string>
    <string name="signuppass">Password</string>
    <string name="signupconfirmpass">Confirm Password</string>
    <string name="gender1">Male</string>
    <string name="gender2">Female</string>
    <string name="signinbutton">SIGN IN</string>
    <string name="signupbutton">SIGN UP</string>
    <string name="haveaccount">Already have an account?</string>
    <string name="donothaveaccount">Do not have an account?</string>
    <string name="loginbuttononsignuppage">LOG IN</string>
    <string name="exit">EXIT</string>
    <string name="blacklist"> BLACKLIST APP </string>
    <string name="prioritize"> PRIORITIZE APP </string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="details">Please enter your details here</string>
    <string name="dailyactivity">YOUR DAILY ACTIVITY</string>
    <string name="blacklist_app">BLACKLIST APP</string>
    <string name="star_app">STAR APP</string>
    <string name="splash">SPLASH</string>
    <string name="password_error">Incorrect password</string>
    <string name="email_error">Please enter a valid email</string>
</resources>
