<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Login.LoginActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"

        android:fontFamily="@font/playfair_display"
        android:hint="@string/signupemail"
        android:textColorHint="@color/front"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginLeft="56dp" />




    <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/password"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/signuppass"
        android:textColor="@color/front"

        android:fontFamily="@font/playfair_display"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email">

    </com.google.android.material.textfield.TextInputEditText>

    <Button
        android:id="@+id/button2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/thirtydpmargin"
        android:background="@color/background"
        android:fontFamily="@font/playfair_display"
        android:text="@string/signinbutton"
        android:textColor="@color/front"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="275dp"
        android:layout_height="391dp"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />




</androidx.constraintlayout.widget.ConstraintLayout>

